--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,19 @@
       <version>0.2.23</version>
   </dependency>
 
+    <!--c3p0-->
+    <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+    <dependency>
+      <groupId>com.mchange</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.2.1</version>
+    </dependency>
 
 
 
-</dependencies>
+
+
+  </dependencies>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
