加入认证策略

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -1,13 +1,17 @@
 [main]
+#配置数据源
 dataSource = com.mchange.v2.c3p0.ComboPooledDataSource
 dataSource.driverClass = com.mysql.jdbc.Driver
 dataSource.jdbcUrl = jdbc:mysql://localhost:3306/shiro
 dataSource.user = root
 dataSource.password = 123456
 
+#$表示引用对象
 jdbcRealm = org.apache.shiro.realm.jdbc.JdbcRealm
-jdbcRealm.dataSource = $dataSource
+#配置验证器
+authenticationStrategy = org.apache.shiro.authc.pam.AllSuccessfulStrategy
 securityManager.realm = $jdbcRealm
+securityManager.authenticator.authenticationStrategy = $authenticationStrategy
 
 [users]
 zhangsan=123456
